del hidden and debug images

--- a/de/trans/tr_level_1_3.dita
+++ b/de/trans/tr_level_1_3.dita
@@ -12,7 +12,7 @@
             <li>Ebenso schmiegen sich Fußnotenreferenzen ohne Leerraum direkt an das vorangehende
                 Zeichen an. </li>
         </ul>
-        <example id="example_a2r_3wm_rsb"><image href="../../en/trans/images/level_2_3.png"
+    <example id="example_a2r_3wm_rsb"><image href="images/level_2_3.png"
                 id="image_vxh_rmr_n1b" scale="30"/>
             <p>
                 <pre id="pre_b2r_3wm_rsb">
