--- a/de/trans/ocr_d_koordinationsgremium_codierung.dita
+++ b/de/trans/ocr_d_koordinationsgremium_codierung.dita
@@ -1575,7 +1575,7 @@ id="image_o5k_2gz_s1b"/></entry>
 <entry>223 </entry>
 <entry>Latin small letter sharp s </entry>
 <entry>Unicode </entry>
-<entry>s </entry>
+<entry>ß </entry>
 <entry/>
 </row>
 <row>
@@ -1585,7 +1585,7 @@ id="image_o5k_2gz_s1b"/></entry>
 <entry>7838 </entry>
 <entry>Latin capital letter sharp S </entry>
 <entry>Unicode </entry>
-<entry>s </entry>
+<entry>ẞ </entry>
 <entry/>
 </row>
 <row>
@@ -1625,7 +1625,7 @@ id="image_o5k_2gz_s1b"/></entry>
 <entry>64262 </entry>
 <entry>Latin small ligature st </entry>
 <entry>Unicode </entry>
-<entry>s </entry>
+<entry>st </entry>
 <entry/>
 </row>
 <row>
@@ -1635,7 +1635,7 @@ id="image_o5k_2gz_s1b"/></entry>
 <entry>62764 </entry>
 <entry>Latin small ligature sp </entry>
 <entry>Private1 </entry>
-<entry>s </entry>
+<entry>sp </entry>
 <entry/>
 </row>
 <row>
@@ -1655,7 +1655,7 @@ id="image_o5k_2gz_s1b"/></entry>
 <entry>42793 </entry>
 <entry>Latin small letter (ligature) tz </entry>
 <entry>Unicode </entry>
-<entry>t </entry>
+<entry>tz </entry>
 <entry/>
 </row>
 <row>
