--- a/de/trans/level_rom.dita
+++ b/de/trans/level_rom.dita
@@ -25,284 +25,284 @@
                         <row product="ruleset">
                             <entry/>
                             <entry>I</entry>
-                            <entry><tt>Ⅰ</tt></entry>
-                            <entry><tt>Ⅰ</tt></entry>
+                            <entry>Ⅰ</entry>
+                            <entry>Ⅰ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>II</entry>
-                            <entry><tt>Ⅱ</tt></entry>
-                            <entry><tt>Ⅱ</tt></entry>
+                            <entry>Ⅱ</entry>
+                            <entry>Ⅱ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>III</entry>
-                            <entry><tt>Ⅲ</tt></entry>
-                            <entry><tt>Ⅲ</tt></entry>
+                            <entry>Ⅲ</entry>
+                            <entry>Ⅲ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>IV</entry>
-                            <entry><tt>Ⅳ</tt></entry>
-                            <entry><tt>Ⅳ</tt></entry>
+                            <entry>Ⅳ</entry>
+                            <entry>Ⅳ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>V</entry>
-                            <entry><tt>Ⅴ</tt></entry>
-                            <entry><tt>Ⅴ</tt></entry>
+                            <entry>Ⅴ</entry>
+                            <entry>Ⅴ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>VI</entry>
-                            <entry><tt>Ⅵ</tt></entry>
-                            <entry><tt>Ⅵ</tt></entry>
+                            <entry>Ⅵ</entry>
+                            <entry>Ⅵ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>VII</entry>
-                            <entry><tt>Ⅶ</tt></entry>
-                            <entry><tt>Ⅶ</tt></entry>
+                            <entry>Ⅶ</entry>
+                            <entry>Ⅶ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>VIII</entry>
-                            <entry><tt>Ⅷ</tt></entry>
-                            <entry><tt>Ⅷ</tt></entry>
+                            <entry>Ⅷ</entry>
+                            <entry>Ⅷ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>IX</entry>
-                            <entry><tt>Ⅸ</tt></entry>
-                            <entry><tt>Ⅸ</tt></entry>
+                            <entry>Ⅸ</entry>
+                            <entry>Ⅸ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>X</entry>
-                            <entry><tt>Ⅹ</tt></entry>
-                            <entry><tt>Ⅹ</tt></entry>
+                            <entry>Ⅹ</entry>
+                            <entry>Ⅹ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>XI</entry>
-                            <entry><tt>Ⅺ</tt></entry>
-                            <entry><tt>Ⅺ</tt></entry>
+                            <entry>Ⅺ</entry>
+                            <entry>Ⅺ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>XII</entry>
-                            <entry><tt>Ⅻ</tt></entry>
-                            <entry><tt>Ⅻ</tt></entry>
+                            <entry>Ⅻ</entry>
+                            <entry>Ⅻ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>L</entry>
-                            <entry><tt>Ⅼ</tt></entry>
-                            <entry><tt>Ⅼ</tt></entry>
+                            <entry>Ⅼ</entry>
+                            <entry>Ⅼ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>C</entry>
-                            <entry><tt>Ⅽ</tt></entry>
-                            <entry><tt>Ⅽ</tt></entry>
+                            <entry>Ⅽ</entry>
+                            <entry>Ⅽ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>D</entry>
-                            <entry><tt>Ⅾ</tt></entry>
-                            <entry><tt>Ⅾ</tt></entry>
+                            <entry>Ⅾ</entry>
+                            <entry>Ⅾ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>M</entry>
-                            <entry><tt>Ⅿ</tt></entry>
-                            <entry><tt>Ⅿ</tt></entry>
+                            <entry>Ⅿ</entry>
+                            <entry>Ⅿ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>i</entry>
-                            <entry><tt>ⅰ</tt></entry>
-                            <entry><tt>ⅰ</tt></entry>
+                            <entry>ⅰ</entry>
+                            <entry>ⅰ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>ii</entry>
-                            <entry><tt>ⅱ</tt></entry>
-                            <entry><tt>ⅱ</tt></entry>
+                            <entry>ⅱ</entry>
+                            <entry>ⅱ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>iii</entry>
-                            <entry><tt>ⅲ</tt></entry>
-                            <entry><tt>ⅲ</tt></entry>
+                            <entry>ⅲ</entry>
+                            <entry>ⅲ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>iv</entry>
-                            <entry><tt>ⅳ</tt></entry>
-                            <entry><tt>ⅳ</tt></entry>
+                            <entry>ⅳ</entry>
+                            <entry>ⅳ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>v</entry>
-                            <entry><tt>ⅴ</tt></entry>
-                            <entry><tt>ⅴ</tt></entry>
+                            <entry>ⅴ</entry>
+                            <entry>ⅴ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>vi</entry>
-                            <entry><tt>ⅵ</tt></entry>
-                            <entry><tt>ⅵ</tt></entry>
+                            <entry>ⅵ</entry>
+                            <entry>ⅵ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>vii</entry>
-                            <entry><tt>ⅶ</tt></entry>
-                            <entry><tt>ⅶ</tt></entry>
+                            <entry>ⅶ</entry>
+                            <entry>ⅶ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>viii</entry>
-                            <entry><tt>ⅷ</tt></entry>
-                            <entry><tt>ⅷ</tt></entry>
+                            <entry>ⅷ</entry>
+                            <entry>ⅷ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>ix</entry>
-                            <entry><tt>ⅸ</tt></entry>
-                            <entry><tt>ⅸ</tt></entry>
+                            <entry>ⅸ</entry>
+                            <entry>ⅸ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>x</entry>
-                            <entry><tt>ⅹ</tt></entry>
-                            <entry><tt>ⅹ</tt></entry>
+                            <entry>ⅹ</entry>
+                            <entry>ⅹ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>xi</entry>
-                            <entry><tt>ⅺ</tt></entry>
-                            <entry><tt>ⅺ</tt></entry>
+                            <entry>ⅺ</entry>
+                            <entry>ⅺ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>xii</entry>
-                            <entry><tt>ⅻ</tt></entry>
-                            <entry><tt>ⅻ</tt></entry>
+                            <entry>ⅻ</entry>
+                            <entry>ⅻ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>l</entry>
-                            <entry><tt>ⅼ</tt></entry>
-                            <entry><tt>ⅼ</tt></entry>
+                            <entry>ⅼ</entry>
+                            <entry>ⅼ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>c</entry>
-                            <entry><tt>ⅽ</tt></entry>
-                            <entry><tt>ⅽ</tt></entry>
+                            <entry>ⅽ</entry>
+                            <entry>ⅽ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>d</entry>
-                            <entry><tt>ⅾ</tt></entry>
-                            <entry><tt>ⅾ</tt></entry>
+                            <entry>ⅾ</entry>
+                            <entry>ⅾ</entry>
                             <entry/>
                         </row>
                         <row product="ruleset">
                             <entry/>
                             <entry>m</entry>
-                            <entry><tt>ⅿ</tt></entry>
-                            <entry><tt>ⅿ</tt></entry>
+                            <entry>ⅿ</entry>
+                            <entry>ⅿ</entry>
                             <entry/>
                         </row>
-                        <row>
+                        <row  product="ruleset">
                             <entry><image href="images/trRom.jpg" id="image_qxl_j2s_ssb"/></entry>
                             <entry>cIↄ</entry>
                             <entry>ⅽIↄ</entry>
                             <entry>ⅽIↄ</entry>
                             <entry>1000</entry>
                         </row>
-                        <row>
+                        <row  product="ruleset">
                             <entry><image href="images/trRom2.jpg" id="image_z54_k2s_ssb"/></entry>
                             <entry>Iↄ</entry>
                             <entry>Iↄ</entry>
                             <entry>Iↄ</entry>
                             <entry>500</entry>
                         </row>
-                        <row>
+                        <row  product="ruleset">
                             <entry><image href="images/trRom3.jpg" id="image_hym_l2s_ssb"/></entry>
                             <entry>c</entry>
                             <entry>ⅽ</entry>
                             <entry>ⅽ</entry>
                             <entry>100</entry>
                         </row>
-                        <row>
+                        <row  product="ruleset">
                             <entry><image href="images/trRom4.jpg" id="image_azq_m2s_ssb"/></entry>
                             <entry>ↄ </entry>
                             <entry>ↄ</entry>
                             <entry>ↄ</entry>
                             <entry>100</entry>
                         </row>
-                        <row>
+                        <row  product="ruleset">
                             <entry/>
                             <entry>Ↄ</entry>
                             <entry>Ↄ</entry>
                             <entry>Ↄ</entry>
                             <entry>100</entry>
                         </row>
-                        <row>
+                        <row  product="ruleset">
                             <entry/>
                             <entry>CD </entry>
                             <entry>ↀ</entry>
                             <entry>ↀ</entry>
                             <entry>1000</entry>
                         </row>
-                        <row>
+                        <row  product="ruleset">
                             <entry/>
                             <entry>ↁ</entry>
                             <entry>ↁ</entry>
                             <entry>ↁ</entry>
                             <entry>5000</entry>
                         </row>
-                        <row>
+                        <row  product="ruleset">
                             <entry/>
                             <entry>ↂ</entry>
                             <entry>ↂ</entry>
                             <entry>ↂ</entry>
                             <entry>10.000</entry>
                         </row>
-                        <row>
+                        <row  product="ruleset">
                             <entry/>
                             <entry>ↇ</entry>
                             <entry>ↇ</entry>
